Styling the app

--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
 <body>
 
   <header>
-    <h1>Movie App!</h1>
+    <span>Movie App</span>
   </header>
   
-    <button id="searchListButton" disabled='true'>Search</button>
-    <button id='myListButton'>My List</button>
+    <button id="searchListButton" disabled='true'>Search results list</button>
+    
+    <button id='myListButton'>My favourite movies</button>
   
   <main>
     <div id='searchList'>
