didn't commit .js and .html last time

--- a/index.html
+++ b/index.html
@@ -26,17 +26,15 @@
 
     </div>
     
-    <div id='myList'></div>
+    <div id='myList'>
+      
+    </div>
 
   </main>
 
   <aside id='movieInfo'>
 
   </aside>
-
-
-
-
 
  <script src="app.js"></script>
 </body>
